@@ -2,29 +2,40 @@ package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.repository.MessageRepository;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.stereotype.Repository;
 
 import java.io.*;
 import java.nio.file.*;
 import java.util.*;
 import java.util.stream.Collectors;
 
+@ConditionalOnProperty(name = "discodeit.repsitory.type", havingValue = "file")
+@Repository
 public class FileMessageRepository implements MessageRepository {
-    private static final String FILE_EXTENSION = ".ser";
-    private final Path directory;
+    private final String FILE_EXTENSION = ".ser";
+    private final Path DIRECTORY;
 
-    public FileMessageRepository(String directoryPath) {
-        this.directory = Paths.get(directoryPath);
-        if (!Files.exists(this.directory)) {
+    public FileMessageRepository(
+            @Value("${discodeit.repository.file-directory:data}") String fileDirectory
+    ) {
+        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), fileDirectory, Message.class.getSimpleName());
+        if (Files.notExists(DIRECTORY)) {
             try {
-                Files.createDirectories(this.directory);
+                Files.createDirectories(DIRECTORY);
             } catch (IOException e) {
-                throw new RuntimeException("디렉토리 생성 실패: " + directoryPath, e);
+                throw new RuntimeException(e);
             }
         }
     }
 
+    private Path resolvePath(UUID id) {
+        return DIRECTORY.resolve(id + FILE_EXTENSION);
+    }
+
     private void saveTofile(Message message) {
-        Path filePath = directory.resolve(message.getId().toString() + FILE_EXTENSION);
+        Path filePath = DIRECTORY.resolve(message.getId().toString() + FILE_EXTENSION);
         try (ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(filePath.toFile()))) {
             oos.writeObject(message);
         } catch (IOException e) {
@@ -32,48 +43,78 @@ public class FileMessageRepository implements MessageRepository {
         }
     }
 
-    private Message loadFromFile(Path filePath) {
-        try (ObjectInputStream ois = new ObjectInputStream(new FileInputStream(filePath.toFile()))) {
-            return (Message) ois.readObject();
-        } catch (IOException | ClassNotFoundException e) {
-            throw new RuntimeException("파일 읽기 실패: " +filePath, e);
-        }
-    }
-
     @Override
     public Message save(Message message) {
-        saveTofile(message);
+        Path path = resolvePath(message.getId());
+        try (
+                FileOutputStream fos = new FileOutputStream(path.toFile());
+                ObjectOutputStream oos = new ObjectOutputStream(fos)
+        ) {
+            oos.writeObject(message);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
         return message;
     }
 
     @Override
-    public Message findById(UUID id) {
-        Path filePath = directory.resolve(id.toString() + FILE_EXTENSION);
-        if (!Files.exists(filePath)) {
-            return null;
+    public Optional<Message> findById(UUID id) {
+        Message messageNullable = null;
+        Path path = resolvePath(id);
+        if (Files.exists(path)) {
+            try (
+                    FileInputStream fis = new FileInputStream(path.toFile());
+                    ObjectInputStream ois = new ObjectInputStream(fis)
+            ) {
+                messageNullable = (Message) ois.readObject();
+            } catch (IOException | ClassNotFoundException e) {
+                throw new RuntimeException(e);
+            }
         }
-        return loadFromFile(filePath);
+        return Optional.ofNullable(messageNullable);
     }
 
     @Override
-    public List<Message> findAll() {
+    public List<Message> findAllByChannelId(UUID channelId) {
         try {
-            return Files.list(directory)
+            return Files.list(DIRECTORY)
                     .filter(path -> path.toString().endsWith(FILE_EXTENSION))
-                    .map(this::loadFromFile)
-                    .collect(Collectors.toList());
+                    .map(path -> {
+                        try (
+                                FileInputStream fis = new FileInputStream(path.toFile());
+                                ObjectInputStream ois = new ObjectInputStream(fis)
+                        ) {
+                            return (Message) ois.readObject();
+                        } catch (IOException | ClassNotFoundException e) {
+                            throw new RuntimeException(e);
+                        }
+                    })
+                    .filter(message -> message.getChannelId().equals(channelId))
+                    .toList();
         } catch (IOException e) {
-            throw new RuntimeException("파일 목록 조회 실패", e);
+            throw new RuntimeException(e);
         }
     }
 
     @Override
-    public void delete(UUID id) {
-        Path filePath = directory.resolve(id.toString() + FILE_EXTENSION);
+    public boolean existsById(UUID id) {
+        Path path = resolvePath(id);
+        return Files.exists(path);
+    }
+
+    @Override
+    public void deleteById(UUID id) {
+        Path path = resolvePath(id);
         try {
-            Files.deleteIfExists(filePath);
+            Files.delete(path);
         } catch (IOException e) {
-            throw new RuntimeException("파일 삭제 실패: " + filePath, e);
+            throw new RuntimeException(e);
         }
+    }
+
+    @Override
+    public void deleteAllByChannelId(UUID channelId) {
+        this.findAllByChannelId(channelId)
+                .forEach(message -> this.deleteById(message.getId()));
     }
 }
